Fix windows text alignment

--- a/home/assets/css/shared.css
+++ b/home/assets/css/shared.css
@@ -17,7 +17,7 @@ body {
 }
 
 .title h1 {
-    padding: 0;
+    padding: 0 0 0.2rem 0;
     margin: 0;
 }
 
